fix: remove ; too much :bug:

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
     grid-column: 1 ;
     grid-row: 1;
     display: grid;
-    grid-template-columns: repeat(1, 300px);;
+    grid-template-columns: repeat(1, 300px);
     grid-template-rows: repeat(1, 1fr);
     background-color: var(--blue);
     
